2016-10-17  Eric Herman <eric@freesa.org>

	inline "check_str" from libecheck

	https://github.com/ericherman/libecheck

	* tests/eh-printf-tests.h: copy-paste-tweak check_str
	* tests/test-hex-int.c: include eh-printf-tests.h
	* tests/test-negative.c: include eh-printf-tests.h
	* tests/test-pct5d.c: include eh-printf-tests.h
	* tests/test-simple.c: include eh-printf-tests.h
	* tests/test-unsigned.c: include eh-printf-tests.h
	* Makefile.am: reflect new include
	* configure.ac: remove libecheck reference
	* README: remove reference to libecheck


2016-10-17  Eric Herman <eric@freesa.org>

	Add tests, and supporting code for "%u" and "%lu"

	* src/eh-printf.c: support "%lu"
	* tests/test-unsigned.c: test "%u", "%lu"
	* Makefile.am: include test-unsigned
	* .gitignore: ignore test-unsigned

2016-10-16  Eric Herman <eric@freesa.org>

	Add tests, and supporting code

	* src/eh-printf.c: support "%X", fix negative, "%5d", "%050d"
	* tests/test-hex-int.c: supporting text for "%X"
	* tests/test-negative.c: test a negative val
	* tests/test-pct5d.c: test padding

2016-10-15  Eric Herman <eric@freesa.org>

	an initial sketch of a sprintf for embedded

	* src/eh-printf.h: created the first API
	* src/eh-printf.c: initial impl
	* tests/test-simple.c: a dumb test
	* configure.ac: basic autotools configure
	* Makefile.am: basic autotools Makefile
	* misc/pre-tidy.patch: prevent Gnu indent from indenting extra
	* .gitignore: added test-simple
	* README: add explanation and build instructions
	* ChangeLog: Freshly created ChangeLog.